configs/ingress/services-aws-no-loadbalancers.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp

spec:
  # This defines which pods are represented by this service
  # The service becomes a network endpoint for other services or external users to connect to (e.g. a browser)
  selector:
    app: webapp
  ports:
    - name: http
      port: 80

  type: ClusterIP
---
  apiVersion: v1
  kind: Service
  metadata:
      name: fleetman-queue

  spec:
      selector:
          app: queue
      ports:
          - name: http
            port: 8161
          - name: endpoint
            port: 61616
      type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
    name: fleetman-position-tracker

spec:
    selector:
        app: position-tracker
    ports:
        - name: http
          port: 8080
    type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
    name: fleetman-api-gateway

spec:
    selector:
        app: api-gateway
    ports:
        - name: http
          port: 8080
    type: ClusterIP
