configs/ingress/ingress-public.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: public-routing
spec:
    rules:
        - host: k8s.transier.industries
          http:
            paths:
                - path: /
                  backend:
                    serviceName: fleetman-webapp
                    servicePort: 80
